bitnami/experiments/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
        - name: my-nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
spec:
  selector:
    run: my-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test
  annotations:
    ingress.cilium.io/insecure-node-port: "80"
    ingress.cilium.io/secure-node-port: "443"
    ingress.cilium.io/loadbalancer-mode: shared
    ingress.cilium.io/websocket: enabled
    cert-manager.io/cluster-issuer: "letsencrypt-selfsigned"
spec:
  ingressClassName: cilium
  rules:
  - host: test.83cnnvea23rb2222.ertia.cloud
    http:
      paths:
      - backend:
          service:
            name: my-nginx-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test.83cnnvea23rb2222.ertia.cloud
    secretName: nginx-cert
